docs/0.6.2/_sources/api/gwpy.table.EventTable.rst.txt


EventTable
=====================

.. currentmodule:: gwpy.table

.. autoclass:: EventTable
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EventTable.ColumnClass
      ~EventTable.colnames
      ~EventTable.dtype
      ~EventTable.groups
      ~EventTable.has_mixin_columns
      ~EventTable.iloc
      ~EventTable.indices
      ~EventTable.info
      ~EventTable.loc
      ~EventTable.mask
      ~EventTable.masked
      ~EventTable.meta

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EventTable.add_column
      ~EventTable.add_columns
      ~EventTable.add_index
      ~EventTable.add_row
      ~EventTable.argsort
      ~EventTable.as_array
      ~EventTable.binned_event_rates
      ~EventTable.convert_bytestring_to_unicode
      ~EventTable.convert_unicode_to_bytestring
      ~EventTable.copy
      ~EventTable.event_rate
      ~EventTable.fetch
      ~EventTable.field
      ~EventTable.filled
      ~EventTable.filter
      ~EventTable.from_pandas
      ~EventTable.get_column
      ~EventTable.group_by
      ~EventTable.hist
      ~EventTable.index_column
      ~EventTable.index_mode
      ~EventTable.insert_row
      ~EventTable.itercols
      ~EventTable.keep_columns
      ~EventTable.keys
      ~EventTable.more
      ~EventTable.pformat
      ~EventTable.plot
      ~EventTable.pprint
      ~EventTable.read
      ~EventTable.remove_column
      ~EventTable.remove_columns
      ~EventTable.remove_indices
      ~EventTable.remove_row
      ~EventTable.remove_rows
      ~EventTable.rename_column
      ~EventTable.replace_column
      ~EventTable.reverse
      ~EventTable.show_in_browser
      ~EventTable.show_in_notebook
      ~EventTable.sort
      ~EventTable.to_pandas
      ~EventTable.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: ColumnClass
   .. autoattribute:: colnames
   .. autoattribute:: dtype
   .. autoattribute:: groups
   .. autoattribute:: has_mixin_columns
   .. autoattribute:: iloc
   .. autoattribute:: indices
   .. autoattribute:: info
   .. autoattribute:: loc
   .. autoattribute:: mask
   .. autoattribute:: masked
   .. autoattribute:: meta

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: binned_event_rates
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: event_rate
   .. automethod:: fetch
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: filter
   .. automethod:: from_pandas
   .. automethod:: get_column
   .. automethod:: group_by
   .. automethod:: hist
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: itercols
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: plot
   .. automethod:: pprint
   .. automethod:: read
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: to_pandas
   .. automethod:: write

   
   